fix: unshift custom css to give a priority
currently fixing the custom font not applied

--- a/docs/app/assets/css/main.css
+++ b/docs/app/assets/css/main.css
@@ -3,8 +3,5 @@
 
 @theme static {
   --font-sans: 'Public Sans', sans-serif;
-}
-
-:root {
   --ui-container: 90rem;
 }
